Prepare to deploy
[*] Upgrade Springboot to 2.1.1.RELEASE
[*] Compile to jar file: move /templates and /i18n to /resources; /css, /js, /libs/, /pic to /resources/static
[*] add "~{...}" into all thymeleaf fragments
[*] modify log4j2 configurations to colorize output messages