@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ua.kiev.prog</groupId>
     <artifactId>photo-pond</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <name>PhotoPond PetProject</name>
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -20,12 +20,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <thymeleaf-spring4.version>3.0.2.RELEASE</thymeleaf-spring4.version>
-        <thymeleaf-layout-dialect.version>2.2.2</thymeleaf-layout-dialect.version>
-
         <skip.integrationTest>false</skip.integrationTest>
         <integrationTest.mask>**/*IT.java</integrationTest.mask>
-        <log4j2.version>2.7</log4j2.version>
     </properties>
 
 
@@ -61,7 +57,7 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>2.5.4</version>
+            <version>2.6.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -118,11 +114,11 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <!--<version>6.0.6</version>-->
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <!--<version>42.2.5</version>-->
         </dependency>
 
 
@@ -130,23 +126,9 @@
 
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
-        <!--<dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            &lt;!&ndash;<version>${thymeleaf-spring4.version}</version>&ndash;&gt;
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-spring5</artifactId>
-            &lt;!&ndash;<version>${thymeleaf-spring4.version}</version>&ndash;&gt;
-        </dependency>
-        <dependency>
-            <groupId>nz.net.ultraq.thymeleaf</groupId>
-            <artifactId>thymeleaf-layout-dialect</artifactId>
-            &lt;!&ndash;<version>${thymeleaf-layout-dialect.version}</version>&ndash;&gt;
-        </dependency>-->
+
         <!-- LOG4J2-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -234,10 +216,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>-Dfile.encoding=UTF-8 -Xmx1280m -XX:MaxPermSize=512m</argLine>
                     <reuseForks>false</reuseForks>
-                    <forkCount>1</forkCount>
-                    <forkedProcessTimeoutInSeconds>100</forkedProcessTimeoutInSeconds>
+                    <forkCount>0</forkCount>
+                    <forkedProcessTimeoutInSeconds>200</forkedProcessTimeoutInSeconds>
+                    <!--<argLine></argLine>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -260,7 +244,7 @@
             <plugin>
                 <groupId>nl.geodienstencentrum.maven</groupId>
                 <artifactId>sass-maven-plugin</artifactId>
-                <version>3.5.4</version>
+                <version>3.7.0</version>
                 <executions>
                     <execution>
                         <phase>prepare-package</phase>
@@ -276,7 +260,7 @@
                             <source>
                                 <directory>${project.basedir}/src/main/sass</directory>
                             </source>
-                            <destination>${project.basedir}/src/main/webapp/css</destination>
+                            <destination>${project.basedir}/src/main/resources/static/css</destination>
                         </resource>
                     </resources>
                 </configuration>
